# signal-processing-demo

./: .coverage  .gitignore  main.py  pyproject.toml  pytest.toml
notebooks/: for-presentation.ipynb  generate-samples.ipynb  model.pth  signal-eda.ipynb  signal-melspec.ipynb  signal-preprocessing.ipynb  signal-stft-preprocessing.ipynb  test-cnn-no-melspec.ipynb  test-cnn-no-preprocessing.ipynb  test-cnn-using-stft.ipynb  test-cnn-with-melspec.ipynb  test-cnn.ipynb  test-mlp-no-preprocessing.ipynb  test-mlp-using-fft.ipynb
signal/: generate.py
src/: generate.py
src/models/: cnn.py  mlp.py
src/utils/: generate_samples.py
tests/integration/: test_generate_data.py
tests/unit/: test_generate.py  test_generate_samples.py  test_generate_signals.py
