[project]
name = "signal-processing-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "notebook>=7.5.3",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.9.1",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
